fix: adjusting z-index values to prevent fighting between the sidebar and overlays

--- a/client/src/components/modules/side-bar/side-bar.scss
+++ b/client/src/components/modules/side-bar/side-bar.scss
@@ -4,7 +4,7 @@
 @media (max-width: 1000px) {
 	.side-bar {
 		position: absolute !important;
-		z-index: 10;
+		z-index: 999;
 
 		min-width: 0 !important;
 
